# chatstocks

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
twitchbot/: __main__.py  bot.py  chat.py  keyword_analysis.py  sentiment_anal.py
